--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -49,6 +49,7 @@ users:
   feloy: UFG7CN85U
   gianarb: U0FSCELCR
   girishramnani: U9M4K75EU
+  gracenng: U01GX18N6H3
   grdryn: U017628HJL8
   gsquared94: U0131C0PJBU
   guineveresaenger: U4H2QU3DW
@@ -66,9 +67,9 @@ users:
   jdumars: U0YJS6LHL
   jeefy: U5MCFK468
   jeremyrickard: U72ESU398
-  Jesse Butler: U0122V3T932
   jiangd: UFS2C9JEA
   jimangel: U4HSVFA5U
+  jlbutler: U0122V3T932
   jmccormick2001: UMPLV0G0H
   jmrodri: U4KATPQ48
   Joel Barker: U014AHSTBPA
@@ -84,6 +85,7 @@ users:
   kikisdeliveryservice: U9HFFRFT2
   Kunal Kushwaha: UQ14U3NAY
   LappleApple: U011C07244F
+  leonardpahlke: U029NBZFV97
   liggitt: U0BGPQ6DS
   listx: UFCU8S8P3
   lukehinds: UN2P2M4F4
@@ -123,6 +125,7 @@ users:
   rm3l: U034AQUV7PB
   rnapoles-rh: U01KDAMSWJD
   robshelly: U01LL4P09SR
+  salaxander: UDHV1RXB2
   sammy: U8NJFL023
   sandipanpanda: U02A47HJ517
   saschagrunert: U53SUDBD4
@@ -149,7 +152,6 @@ users:
   vladimirmukhin: UHVSCSD4G
   wilsonehusin: U0100068GF2
   wurbanski: URX7CMK97
-  Xander: UDHV1RXB2
   xmudrii: U4Q2TNGVD
   yinw: UMVD1GDCY
   zubron: U7G0KNS86
