feat: Introduce channel for docs on KEDA

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -177,6 +177,7 @@ channels:
   - name: kcp-prototype
   - name: keda
   - name: keda-dev
+  - name: keda-docs
   - name: keel
   - name: kiam
   - name: kilo
