Add Nigel to Zoom Admin List
Moderator's file was updated to add Nigel as Zoom admin, but Slack group was not updated.

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -101,6 +101,7 @@ usergroups:
       - nzoueidi
       - onlydole
       - paris
+      - pnbrown
 
   - name: k8satl-hosts
     long_name: Kubernetes Atlanta Meetup Hosts
