--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -382,6 +382,7 @@ channels:
     archived: true
   - name: sig-contribex
   - name: sig-contribex-meetings
+  - name: sig-contribex-comms
   - name: sig-contribex-triage
     archived: true
   # sig-docs* channels are defined in sig-docs/
