Add TestGrid channel under sig-testing

--- a/communication/slack-config/sig-testing/config.yaml
+++ b/communication/slack-config/sig-testing/config.yaml
@@ -3,6 +3,7 @@ channels:
   - name: prow
   - name: prow-alerts
   - name: sig-testing
+  - name: testgrid
   - name: testing-commons
     archived: true
   - name: testing-ops
