--- a/communication/slack-config/restrictions.yaml
+++ b/communication/slack-config/restrictions.yaml
@@ -56,6 +56,7 @@ restrictions:
       - "^sig-testing"
       - "^kind"
       - "^prow"
+      - "^testgrid"
       - "^testing"
     usergroups:
       - "^test-infra-oncall$"
