Add Josh as SIG-ContribEx co-chair
Including: add to OWNERs files.

Signed-off-by: Josh Berkus <josh@agliodbs.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1290,6 +1290,9 @@ sigs:
     - github: alisondy
       name: Alison Dowdney
       company: Kasten
+    - github: jberkus
+      name: Josh Berkus
+      company: Red Hat
     - github: mrbobbytables
       name: Bob Killen
       company: Google
