Add Eraser channel to Slack

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -97,6 +97,7 @@ channels:
     archived: true
   - name: emea-dev
   - name: emea-users
+  - name: eraser
   - name: es-users
   - name: etcd
   - name: etcdadm
