--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1503,15 +1503,15 @@ sigs:
     day: Monday
     time: "15:00"
     tz: UTC
-    frequency: monthly
+    frequency: first Tuesday of the month
     url: https://docs.google.com/document/d/1NwO1AN8Ea2zlK8uAdaDAKf1-LZDAFvSewIfrKqfl5No/
     archive_url: https://docs.google.com/document/d/1NwO1AN8Ea2zlK8uAdaDAKf1-LZDAFvSewIfrKqfl5No/
     recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP3b5hlx0YV7Lo7DtckM84y8
-  - description: New Contributors Meet and Greet
+  - description: New Contributor Meet and Greet
     day: Tuesday
     time: "10:30"
     tz: UTC
-    frequency: monthly
+    frequency: first Tuesday of the month
     url: https://zoom.us/j/92822621820?pwd=S1p4RnB1RmNSZ3JjYlRRUVd4UjFPZz09
     archive_url: https://docs.google.com/document/d/1emuO4nmaQq3K8JZ9-MQeIygtrCPO9kWv7U7RzTaW4F8/
     recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP3b5hlx0YV7Lo7DtckM84y8
