Add africa-dev channel for dedicated k8s mentorship Addresses issue #6729

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -2,6 +2,7 @@
 # This includes archived channels, which are marked with `archived: true`.
 
 channels:
+  - name: africa-dev
   - name: airflow-operator
   - name: akri
   - name: aks-engine-users
