Update pinniped user group
Signed-off-by: Monis Khan <mok@vmware.com>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -171,12 +171,10 @@ usergroups:
     channels:
       - pinniped
     members:
-      - enj
-      - cfryanr
-      - margocrawf
-      - microwavables
       - anjaltelang
-      - shamus
+      - benjaminapetersen
+      - cfryanr
+      - jonasrosland
       - pnbrown
 
   - name: steering-members
