--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -17,6 +17,7 @@ users:
   Atharva-Shinde: U028J67T478
   bai: U4XAULHL3
   Bart Farrell: U01DZM7PJDT
+  benjaminapetersen: U0217E7EXV4
   bhumijgupta: U022JUBM3B4
   briandealwis: UAZKM38JV
   bubblemelon: U7K9C643G
