--- a/communication/slack-config/sig-docs/docs-channels.yaml
+++ b/communication/slack-config/sig-docs/docs-channels.yaml
@@ -14,6 +14,7 @@ channels:
   - name: kubernetes-docs-ko
   - name: kubernetes-docs-pt
   - name: kubernetes-docs-ru
+  - name: kubernetes-docs-tr
   - name: kubernetes-docs-vi
   - name: kubernetes-docs-zh
   - name: kubernetes-docs-pl
