Request for adding a Slack channel to focus on Velero Data Mover discussion.
Signed-off-by: Xun Jiang <jxun@vmware.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -448,6 +448,7 @@ channels:
   - name: ug-vmware
   - name: undistro
   - name: vcluster
+  - name: velero-data-mover
   - name: velero-dev
   - name: velero-users
     id: C6VCGP4MT
