Update channels.yaml for ACK
Proposal for new channel dedicated to discussion of AWS Controllers for Kubernetes https://aws-controllers-k8s.github.io/community/

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -23,6 +23,7 @@ channels:
   - name: aus-nz-users
   - name: awesome-kubernetes
   - name: aws-authenticator
+  - name: aws-controllers-k8s
   - name: bazel
   - name: bindings-discuss
   - name: bootkube
