--- a/elections/steering/2022/voters.yaml
+++ b/elections/steering/2022/voters.yaml
@@ -6,11 +6,12 @@
 #
 # If you feel you meet the eligibility criteria but do not see your GitHub username
 # below, please fill out an exception request and the elections team will get back to
-# you as quickly as possible: LINK TBD
+# you as quickly as possible: https://elections.k8s.io/app/elections/steering---2022/exception
 #
 # History:
 # 2022-08-13: Initial voter list prepared using devstats data provided Lukasz Gryglicki
 #   and current organization membership status.
+# 2022-08-15: Add incoing CoCC members and exception link.
 #
 eligible_voters:
 - 196Ikuchil
