Add community channel for outreach and planning
Signed-off-by: Austin Macdonald <austin@redhat.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -337,6 +337,7 @@ channels:
   - name: openstack-helm
   - name: openstack-kolla
   - name: operator-builder
+  - name: operator-framework-community
   - name: operator-sdk-dev
   - name: ops-status
     archived: true
