slack-config: rename ko-project to ko-build

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -191,7 +191,8 @@ channels:
   - name: kcna-exam-prep
   - name: klog
   - name: knative
-  - name: ko-project
+  - name: ko-build
+    id: C01T7DTP65S
   - name: kompose
   - name: kong
   - name: konveyor
