--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -82,6 +82,7 @@ users:
   kadel: U0DE6E8JY
   kaslin: U5ENKU0AE
   katharine: UBTBNJ6GL
+  katcosgrove: U01GDERGEHF
   kikisdeliveryservice: U9HFFRFT2
   Kunal Kushwaha: UQ14U3NAY
   LappleApple: U011C07244F
@@ -104,6 +105,7 @@ users:
   MonzElmasry: U018U96HYDQ
   mrbobbytables: U511ZSKHD
   munnerz: U0EC03FTN
+  nate-double-u: U01AWL6BD62
   nikhita: U2PQHGMLN
   nkubala: UA90QL2BE
   nzoueidi: UBU72MWP2
@@ -111,6 +113,7 @@ users:
   pabloschuhmacher: U01AAGZ06KU
   palnabarun: UBH9NTMBM
   paris: U5SB22BBQ
+  psaggu: U012EE74CU8
   pb82: U019M8295AQ
   pensu91: U44FHF81G
   phenixblue: UB4UVLEAK
