Add alternating SIG Release meeting times
Signed-off-by: Jeremy Rickard <jrickard@microsoft.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2147,9 +2147,17 @@ sigs:
     - github: tpepper
       name: Tim Pepper
   meetings:
-  - description: Regular SIG Meeting
+  - description: Regular SIG Meeting APAC/EU Oriented Time
     day: Tuesday
     time: "15:30"
+    tz: UTC
+    frequency: biweekly
+    url: https://zoom.us/j/327142148?pwd=RE9aZWtCc0hhOWs4ZTdXZ0hBM0ROdz09
+    archive_url: https://bit.ly/k8s-sig-release-meeting
+    recordings_url: https://bit.ly/k8s-sig-release-videos
+  - description: Regular SIG Meeting US Oriented Time
+    day: Tuesday
+    time: "17:00"
     tz: UTC
     frequency: biweekly
     url: https://zoom.us/j/327142148?pwd=RE9aZWtCc0hhOWs4ZTdXZ0hBM0ROdz09
