Adding sig-security-assessments Slack Channel!
See above - I'm attempting to update this file to enable the creation of a new slack channel for self-assessments!

--- a/communication/slack-config/sig-security/config.yaml
+++ b/communication/slack-config/sig-security/config.yaml
@@ -3,4 +3,4 @@ channels:
   - name: sig-security-assess-capi
   - name: sig-security-docs
   - name: sig-security-tooling
-
+  - name: sig-security-assessments
