--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -11,16 +11,18 @@ users:
   anjaltelang: U028B09KZ5X
   ankeesler: UBAA1KQ4A
   annajung: U8SLB1P2Q
-  AvineshTripathi: U029U44P26B
   aravindputrevu: U1G27SDU6
   asmacdo: UNVH7RY9J
   Atharva-Shinde: U028J67T478
+  AvineshTripathi: U029U44P26B
   bai: U4XAULHL3
   Bart Farrell: U01DZM7PJDT
+  bart0sh: U8VJC20R3
   benjaminapetersen: U0217E7EXV4
   bhumijgupta: U022JUBM3B4
   briandealwis: UAZKM38JV
   bubblemelon: U7K9C643G
+  byako: U03GZBD4J4C
   calebamiles: U1ZDD4CUR
   camilamacedo86: UJDM393EH
   castrojo: U1W1Q6PRQ
@@ -41,6 +43,7 @@ users:
   dims: U0Y7A2MME
   divya-mohan0209: UV4J7K97Z
   dougm: U8GG20UE9
+  elezar: ULV21K3CH
   enj: U2T4CVDTJ
   erismaster: U0162FJ79LY
   estroz: UKSEANEC9
@@ -84,6 +87,8 @@ users:
   katharine: UBTBNJ6GL
   katcosgrove: U01GDERGEHF
   kikisdeliveryservice: U9HFFRFT2
+  klihub: U9856A799
+  klueska: UF3ARH55Y
   Kunal Kushwaha: UQ14U3NAY
   LappleApple: U011C07244F
   leonardpahlke: U029NBZFV97
@@ -118,6 +123,7 @@ users:
   pensu91: U44FHF81G
   phenixblue: UB4UVLEAK
   pnbrown: U011JJTQVGF
+  pohly: U91901TMF
   prietyc123: U01D4MBLM52
   puerco: ULGHLJ7TP
   PurneswarPrasad: U027CFKVAB0
