--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -19,6 +19,7 @@ channels:
     archived: true
   - name: argentina
   - name: arm64
+  - name: armory-k8s
   - name: aus-nz-dev
   - name: aus-nz-users
   - name: awesome-kubernetes
