--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -353,6 +353,7 @@ channels:
   - name: prometheus
   - name: prometheus-operator
   - name: prometheus-operator-dev
+  - name: provider-oci
   - name: pt_br-users
   - name: purelb-users
   - name: raksh
