steering: Onboard/offboard members following 2023 election results
Add:
- Benjamin Elder
- Nabarun Pal

Remove:
- Davanum (Dims) Srinivas
- Jordan Liggitt

Signed-off-by: Stephen Augustus <foo@auggie.dev>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -186,11 +186,11 @@ usergroups:
     channels:
       - steering-committee
     members:
+      - bentheelder
       - cblecker
-      - dims
       - justaugustus
-      - liggitt
       - mrbobbytables
+      - palnabarun
       - paris
       - tpepper
 
