--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -19,6 +19,7 @@ users:
   Bart Farrell: U01DZM7PJDT
   bart0sh: U8VJC20R3
   benjaminapetersen: U0217E7EXV4
+  bentheelder: U1P7T516X
   bhumijgupta: U022JUBM3B4
   briandealwis: UAZKM38JV
   bubblemelon: U7K9C643G
