Correct sig-cli meeting frequencies

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -669,7 +669,7 @@ sigs:
     day: Wednesday
     time: "09:00"
     tz: PT (Pacific Time)
-    frequency: monthly
+    frequency: every four weeks
     url: https://zoom.us/j/288426795?pwd=UDdoYnFyNjBiS1RHcXRxS1BCNy9wUT09
     archive_url: https://docs.google.com/document/d/1r0YElcXt6G5mOWxwZiXgGu_X6he3F--wKwg-9UBc29I/edit?usp=sharing
     recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP28HaTzSlFe6RJVxpFmbUvF
@@ -685,7 +685,7 @@ sigs:
     day: Wednesday
     time: "09:00"
     tz: PT (Pacific Time)
-    frequency: monthly
+    frequency: every four weeks
     url: https://zoom.us/j/288426795?pwd=UDdoYnFyNjBiS1RHcXRxS1BCNy9wUT09
     archive_url: https://docs.google.com/document/d/1r0YElcXt6G5mOWxwZiXgGu_X6he3F--wKwg-9UBc29I/edit?usp=sharing
     recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP28HaTzSlFe6RJVxpFmbUvF
