--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2658,6 +2658,9 @@ sigs:
     - github: BenTheElder
       name: Benjamin Elder
       company: Google
+    - github: michelle192837
+      name: Michelle Shepardson
+      company: Google
     - github: spiffxp
       name: Aaron Crickenberger
       company: Google
@@ -2671,9 +2674,15 @@ sigs:
     - github: alvaroaleman
       name: Alvaro Aleman
       company: Red Hat
+    - github: aojea
+      name: Antonio Ojea
+      company: Google
     - github: cjwagner
       name: Cole Wagner
       company: Google
+    - github: pohly
+      name: Patrick Ohly
+      company: Intel
     emeritus_leads:
     - github: fejta
       name: Erick Fejta
