User group for Cluster API release team

--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -4,10 +4,12 @@ users:
   adisky: U9YRVLTEH
   alejandrox1: U6AS37R50
   aleksandra-malinowska: U357LUPHS
+  alexander-demicev: UR7UCR7RV
   AlexB138: U3JA3MDGV
   alisondy: U9CBCBLCV
   ameukam: U68KPQ448
   anandrkskd: U01DRS3V0R2
+  aniruddha2000: U02BU1RP41H
   anjaltelang: U028B09KZ5X
   ankeesler: UBAA1KQ4A
   annajung: U8SLB1P2Q
@@ -29,6 +31,7 @@ users:
   castrojo: U1W1Q6PRQ
   cblecker: U3EDWR9FV
   cdrage: U2TU9NPH9
+  CecileRobertMichon: U98JPHB2M
   cfryanr: U0188B6J42H
   chrisshort: U2YGXSD9B
   cici37: UTY5J12L9
@@ -43,6 +46,7 @@ users:
   dharmit: U0APPPEKE
   dims: U0Y7A2MME
   divya-mohan0209: UV4J7K97Z
+  dntosas: UKT4D74F3
   dougm: U8GG20UE9
   elezar: ULV21K3CH
   elsony: UCW8323KL
@@ -52,12 +56,14 @@ users:
   fabianvf: UAJ3UH29F
   feiskyer: U0ASA4398
   feloy: UFG7CN85U
+  furkatgofurov7: UV31DL3CG
   gianarb: U0FSCELCR
   girishramnani: U9M4K75EU
   gracenng: U01GX18N6H3
   grdryn: U017628HJL8
   gsquared94: U0131C0PJBU
   guineveresaenger: U4H2QU3DW
+  hackeramitkumar: U045992D532
   hasheddan: ULLQEF30C
   hoegaarden: U7VA4RZS9
   hubertstefanski: U01941KQ2UT
@@ -118,10 +124,12 @@ users:
   mrbobbytables: U511ZSKHD
   munnerz: U0EC03FTN
   nate-double-u: U01AWL6BD62
+  nawazkh: U03HJN1C81W
   nikhita: U2PQHGMLN
   nkubala: UA90QL2BE
   nzoueidi: UBU72MWP2
   onlydole: U1DD4AZND
+  oscr: U0183J37JUQ
   pabloschuhmacher: U01AAGZ06KU
   palnabarun: UBH9NTMBM
   paris: U5SB22BBQ
@@ -148,6 +156,8 @@ users:
   sandipanpanda: U02A47HJ517
   saschagrunert: U53SUDBD4
   savitharaghunathan: UC8U2V3BM
+  sayantani11: U028S6XNVSN
+  sbueringer: U48TE1L75
   schultzp2020: U030K8UQA2G
   scott-seago: UHGD79E78
   sethmccombs: U92LLUZ8A
@@ -170,6 +180,7 @@ users:
   valaparthvi: U016TMJVDAA
   varshaprasad96: UK59YP2DA
   Verolop: U7NNE57PU
+  VibhorChinda: U031EALE91D
   vladimirmukhin: UHVSCSD4G
   wilsonehusin: U0100068GF2
   wurbanski: URX7CMK97
@@ -177,4 +188,5 @@ users:
   xun-jiang: U02J0QC1VKJ
   yangcao77: U01D1VCNJQ3
   yinw: UMVD1GDCY
+  ykakarap: U0145EMCA03
   zubron: U7G0KNS86
