--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3005,7 +3005,7 @@ workinggroups:
       company: Google
     - github: endocrimes
       name: Danielle Lancashire
-      company: VMware
+      company: Independent
     - github: soltysh
       name: Maciej Szulik
       company: Red Hat
@@ -3360,7 +3360,7 @@ committees:
       company: Cisco
     - github: endocrimes
       name: Danielle Lancashire
-      company: VMware
+      company: Independent
     - github: hlipsig
       name: Hilliary Lipsig
       company: RedHat
