Update affiliation for ehashman

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1621,7 +1621,7 @@ sigs:
     chairs:
     - github: ehashman
       name: Elana Hashman
-      company: Red Hat
+      company: Apple
     - github: logicalhan
       name: Han Kang
       company: Google
