upstream-marketing is now contributor-comms
Name change PR'd into community.

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -21,8 +21,8 @@ usergroups:
       - TaoBeier
 
   - name: contributor-comms
-    long_name: Upstream Marketing
-    description: Upstream Marketing group.
+    long_name: Contributor Communications
+    description: Contributor Communications group.
     channels:
       - sig-contribex
     members:
