--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -20,6 +20,7 @@ users:
   bart0sh: U8VJC20R3
   benjaminapetersen: U0217E7EXV4
   bentheelder: U1P7T516X
+  benoitf: UCQC3DNUA
   bhumijgupta: U022JUBM3B4
   briandealwis: UAZKM38JV
   bubblemelon: U7K9C643G
@@ -171,6 +172,7 @@ users:
   varshaprasad96: UK59YP2DA
   Verolop: U7NNE57PU
   vladimirmukhin: UHVSCSD4G
+  vzhukovs: U030TR1FG85
   wilsonehusin: U0100068GF2
   wurbanski: URX7CMK97
   xmudrii: U4Q2TNGVD
