--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -358,6 +358,7 @@ channels:
   - name: pharmer
   - name: pinniped
   - name: pl-users
+  - name: podman-desktop
   - name: pr-reviews
   - name: prometheus
   - name: prometheus-operator
