Add new Slack channel for Koordinator
Signed-off-by: Siyu Wang <FillZpp.pub@gmail.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -204,6 +204,7 @@ channels:
   - name: kompose
   - name: kong
   - name: konveyor
+  - name: koordinator
   - name: kops-dev
   - name: kops-users
   - name: kots
