add joekr to cluster-api-release-team slack alias

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -246,6 +246,7 @@ usergroups:
       - dntosas
       - furkatgofurov7
       - hackeramitkumar
+      - joekr
       - nawazkh
       - oscr
       - sayantani11
