--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -84,6 +84,7 @@ users:
   jlbutler: U0122V3T932
   jmccormick2001: UMPLV0G0H
   jmrodri: U4KATPQ48
+  joekr: U02MUT273GA
   Joel Barker: U014AHSTBPA
   joelanford: U1R6NQD8W
   joelsmith: U5SLG8T8F
