sig-release: Add Verónica López as SIG Technical Lead
Signed-off-by: Stephen Augustus <foo@auggie.dev>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2175,6 +2175,9 @@ sigs:
       name: Sascha Grunert
       company: Red Hat
     tech_leads:
+    - github: Verolop
+      name: Verónica López
+      company: PlanetScale
     - github: cpanato
       name: Carlos Tadeu Panato Jr.
       company: Chainguard, Inc
