--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1728,7 +1728,7 @@ sigs:
     chairs:
     - github: ameukam
       name: Arnaud Meukam
-      company: Alter Way
+      company: VMware
     - github: dims
       name: Davanum Srinivas
       company: Amazon Web Services
