Add resource-management subproject to sig-node
As part of this, add dynamic-resource-management staging repo as part of
this subproject as well as absorb the (previously) standalone subproject
for noderesourcetopology-api into this new subproject.

Signed-off-by: Kevin Klues <kklues@nvidia.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2148,8 +2148,9 @@ sigs:
     owners:
     - https://raw.githubusercontent.com/kubernetes/node-problem-detector/master/OWNERS
     - https://raw.githubusercontent.com/kubernetes/test-infra/master/config/jobs/kubernetes/node-problem-detector/OWNERS
-  - name: noderesourcetopology-api
+  - name: resource-management
     owners:
+    - https://raw.githubusercontent.com/kubernetes/dynamic-resource-allocation/master/OWNERS
     - https://raw.githubusercontent.com/kubernetes/noderesourcetopology-api/master/OWNERS
   - name: security-profiles-operator
     contact:
