steering: Paris to Emeritus, add Carlos
Signed-off-by: Stephen Augustus <foo@auggie.dev>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -198,10 +198,10 @@ usergroups:
     members:
       - bentheelder
       - cblecker
+      - cpanato
       - justaugustus
       - mrbobbytables
       - palnabarun
-      - paris
       - tpepper
 
   - name: grafana-operator-maintainers
