--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1597,8 +1597,8 @@ sigs:
     - name: sig-docs-zh-owners
       description: Chinese language content
     liaison:
-      github: parispittman
-      name: Paris Pittman
+      github: cpanato
+      name: Carlos Tadeu Panato Jr.
   subprojects:
   - name: kubernetes-blog
     owners:
@@ -2514,8 +2514,8 @@ sigs:
     - name: sig-security-pr-reviews
       description: SIG Security PR review notifications
     liaison:
-      github: parispittman
-      name: Paris Pittman
+      github: cpanato
+      name: Carlos Tadeu Panato Jr.
   subprojects:
   - name: security-audit
     description: Third Party Security Audit
@@ -2605,8 +2605,8 @@ sigs:
     - name: sig-storage-test-failures
       description: Test Failures and Triage
     liaison:
-      github: parispittman
-      name: Paris Pittman
+      github: cpanato
+      name: Carlos Tadeu Panato Jr.
   subprojects:
   - name: external-storage
     owners:
@@ -2735,8 +2735,8 @@ sigs:
     - name: sig-testing-pr-reviews
       description: PR Reviews
     liaison:
-      github: parispittman
-      name: Paris Pittman
+      github: cpanato
+      name: Carlos Tadeu Panato Jr.
   subprojects:
   - name: boskos
     description: |
@@ -3499,6 +3499,9 @@ committees:
     - github: cblecker
       name: Christoph Blecker
       company: Red Hat
+    - github: cpanato
+      name: Carlos Tadeu Panato Jr.
+      company: Chainguard, Inc
     - github: justaugustus
       name: Stephen Augustus
       company: Cisco
@@ -3508,9 +3511,6 @@ committees:
     - github: palnabarun
       name: Nabarun Pal
       company: VMware
-    - github: parispittman
-      name: Paris Pittman
-      company: Apple
     - github: tpepper
       name: Tim Pepper
       company: VMware
