--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -73,6 +73,7 @@ users:
   idvoretskyi: U0CBHE6GM
   ilya-zuyev: U018UF2G42F
   IsaacPD: U01B0C1R9NZ
+  imran: U03K4862X7U
   JamesLaverack: U9MK7274Y
   Jason: UB272379N
   jberkhahn: U7Q21LH2S
