--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1712,6 +1712,9 @@ sigs:
     owners:
     - https://raw.githubusercontent.com/kubernetes-sigs/logtools/main/OWNERS
     - https://raw.githubusercontent.com/kubernetes/kubernetes/master/staging/src/k8s.io/component-base/logs/OWNERS
+  - name: usage-metrics-collector
+    owners:
+    - https://raw.githubusercontent.com/kubernetes-sigs/usage-metrics-collector/main/OWNERS
 - dir: sig-k8s-infra
   name: K8s Infra
   mission_statement: >
