--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -2,6 +2,7 @@
 # usernames to Kubernetes Slack user IDs.
 users:
   adisky: U9YRVLTEH
+  adheipsingh: T09NY5SBT
   alejandrox1: U6AS37R50
   aleksandra-malinowska: U357LUPHS
   alexander-demicev: UR7UCR7RV
