Add triage channel for SIG Auth
Signed-off-by: Monis Khan <mok@microsoft.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -392,6 +392,7 @@ channels:
   - name: sig-apps
   - name: sig-auth
   - name: sig-auth-kms-dev
+  - name: sig-auth-triage
   - name: sig-autoscaling
   - name: sig-autoscaling-api
   - name: sig-cli
