Add cluster api cloud director slack channel
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -54,6 +54,7 @@ channels:
   - name: cluster-api-aws-alerts
   - name: cluster-api-azure
   - name: cluster-api-baremetal
+  - name: cluster-api-cloud-director
   - name: cluster-api-cloudstack
   - name: cluster-api-digitalocean
   - name: cluster-api-docker
