--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -67,7 +67,9 @@ users:
   guineveresaenger: U4H2QU3DW
   hackeramitkumar: U045992D532
   hasheddan: ULLQEF30C
+  Heba: UHE5TSU4W
   hoegaarden: U7VA4RZS9
+  hosseinsalahi: U7SR0QJP8
   hubertstefanski: U01941KQ2UT
   iancoldwater: U9VL5SZPX
   idealhack: U5NJ3DQM9
@@ -155,7 +157,6 @@ users:
   rnapoles-rh: U01KDAMSWJD
   robshelly: U01LL4P09SR
   rtaniwa: U03K27HLHKN
-  salaxander: UDHV1RXB2
   sammy: U8NJFL023
   sandipanpanda: U02A47HJ517
   saschagrunert: U53SUDBD4
@@ -189,6 +190,7 @@ users:
   vzhukovs: U030TR1FG85
   wilsonehusin: U0100068GF2
   wurbanski: URX7CMK97
+  Xander: UDHV1RXB2
   xmudrii: U4Q2TNGVD
   xun-jiang: U02J0QC1VKJ
   yangcao77: U01D1VCNJQ3
