Add kwok slack channel

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -276,6 +276,8 @@ channels:
   - name: kudo
   - name: kurl
   - name: kustomize
+  - name: kwok
+  - name: kwok-dev
   - name: kyverno
   - name: kyverno-dev
   - name: leadership-summit
