sig-cluster-lifecycle: Add cluster-api-addon-provider-helm repo

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1050,6 +1050,11 @@ sigs:
       url: https://zoom.us/j/861487554?pwd=dTVGVVFCblFJc0VBbkFqQlU0dHpiUT09
       archive_url: https://docs.google.com/document/d/1ushaVqAKYnZ2VN_aa3GyKlS4kEd6bSug13xaXOakAQI/edit
       recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP29D0nYgAGWt1ZFqS9Z7lw4
+  - name: cluster-api-addon-provider-helm
+    description: Implementation of Cluster Add-on Provider for Helm, an add-on orchestration
+      solution for Cluster API using Helm.
+    owners:
+    - https://github.com/kubernetes-sigs/cluster-api-addon-provider-helm/blob/main/OWNERS
   - name: cluster-api-operator
     description: Leverages a declarative API and an operator to empower admins to
       handle the lifecycle of Cluster API providers within the management cluster
