Archive big data user group

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -462,6 +462,7 @@ channels:
   - name: tw-users
   - name: ug-big-data
     id: C0ELB338T
+    archived: true
   - name: ug-vmware
   - name: undistro
   - name: vcluster
