Add Eric Paris to Emeritus
Not sure why I was forgotten given I was a founding member.

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3424,6 +3424,8 @@ committees:
       name: Celeste Horgan
     - github: cpanato
       name: Carlos Tadeu Panato Jr.
+    - github: eparis
+      name: Eric Paris
     - github: jdumars
       name: Jaice Singer DuMars
     - github: karenhchu
