added sig-kcp-edge community
added sig-kcp-edge to the channels list to support the sig-kcp-edge community at https://github.com/kcp-dev/edge-mc

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -417,6 +417,7 @@ channels:
   # sig-docs* channels are defined in sig-docs/
   - name: sig-high-availability
     archived: true
+  - name: sig-kcp-edge
   - name: sig-instrumentation
   - name: sig-multicluster
   - name: sig-network
