sig-contribex: Remove Office Hours

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -340,6 +340,7 @@ channels:
   - name: octant
   - name: odo
   - name: office-hours
+    archived: true
   - name: okteto
   - name: olm-dev
   - name: open-cluster-mgmt
