Update vincepri company affiliation
Signed-off-by: Vince Prignano <vincepri@redhat.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -986,7 +986,7 @@ sigs:
       company: VMware
     - github: vincepri
       name: Vince Prignano
-      company: VMware
+      company: Red Hat
     tech_leads:
     - github: fabriziopandini
       name: Fabrizio Pandini
