Adding Paralus to K8s Slack Signed-off-by: Atulpriya Sharma <sharma.atulpriya@gmail.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -362,6 +362,7 @@ channels:
   - name: osbkit
   - name: outreachy-apps
     id: CDH610735
+  - name: paralus
   - name: pharmer
   - name: pinniped
   - name: pl-users
